# deemak

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  database.json
.github/workflows/: ci.yml  renovate.json
_tutorial/: README  library  main_building
_tutorial/.dir_info/: info.json
_tutorial/mess/: .opb_pass  crush  food  friend
_tutorial/mess/.dir_info/: info.json
_tutorial/opb/: .lost_notebook  senpai  ugcl  wifiroom
_tutorial/opb/.dir_info/: info.json
_tutorial/opb/labs/: .databased  bio_lab  chem_lab  materials_lab  phy_lab  vicharaka
sekai/: README  cat.txt  info.json
sekai/.dir_info/: info.json  restore_me
sekai/room_1/.dir_info/: info.json
sekai/room_10/.dir_info/: info.json
sekai/room_2/.dir_info/: info.json
sekai/room_3/.dir_info/: info.json
sekai/room_6/: books.txt
sekai/room_7/: shit.txt
src/: auth.rs  gui_shell.rs  keys.rs  lib.rs  log.rs  login.rs  main.rs  screen.rs  server.rs
src/commands/: argparser.rs  cmds.rs  copy.rs  del.rs  echo.rs  exit.rs  go.rs  help.rs  ls.rs  mod.rs  read.rs  restore.rs  save.rs  solve.rs  tap.rs  unlock.rs  whereami.rs  whoami.rs
src/menu/: about.rs  menu_options.rs  mod.rs  settings.rs
src/metainfo/: info_reader.rs  lock_perm.rs  mod.rs  tests.rs  valid_sekai.rs
src/rns/: mod.rs  restore_comp.rs  security.rs  tests.rs
src/utils/: auth.rs  config.rs  find_root.rs  globals.rs  info_reader.rs  log.rs  mod.rs  prompt.rs  restore_comp.rs  shell_history.rs  tab_completion.rs  test_utils.rs  valid_sekai.rs  wrapit.rs
static/: index.css  index.html  index.js
(+9 files in other folders)
