[package]
name = "deemak"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = []

[dependencies]
raylib = "5.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
rocket = { version = "0.5.1", features = ["json"] }
textwrap = "0.16.2"
flate2 = "1.1.1"
tar = "0.4.44"
walkdir = "2.5.0"
once_cell = "1.18"