[package]
name = "deemak"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = []

[dependencies]
raylib = "5.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
textwrap = "0.16.2"
flate2 = "1.1.1"
tar = "0.4.44"
walkdir = "2.5.0"
once_cell = "1.18"
dotenvy = "0.15"       # For environment variables
rocket = { version = "0.5.1", features = ["json","tls"]} # For  backend server
jsonwebtoken = "9"     # For JWT
argon2 = "0.5"         # For hashing passwords
rand = "0.8"           # Salt generation
rocket_cors = "0.6"    # for frontend requests
ring = "0.17"
data-encoding = "2.4.0"
chrono = "0.4"         # for token expiry

[dev-dependencies]
tempfile = "3.10.1"


[profile.release]
lto = true
codegen-units = 1
